# ChangeLog for media-gfx/seqdiag
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

*seqdiag-0.5.1 (26 Oct 2011)

  26 Oct 2011; James Rowe <jnrowe@gmail.com> +seqdiag-0.5.1.ebuild:
  Version bump [492].

*seqdiag-0.5.0 (22 Oct 2011)

  22 Oct 2011; James Rowe <jnrowe@gmail.com> +seqdiag-0.5.0.ebuild:
  Version bump [477].

  13 Sep 2011; James Rowe <jnrowe@gmail.com> -seqdiag-0.3.7.ebuild:
  Removed obsolete ebuild.

*seqdiag-0.3.8 (18 Aug 2011)

  18 Aug 2011; James Rowe <jnrowe@gmail.com> +seqdiag-0.3.8.ebuild:
  Version bump [450].

  08 Aug 2011; James Rowe <jnrowe@gmail.com> -seqdiag-0.3.5.ebuild,
  seqdiag-0.3.7.ebuild:
  Keyworded x86.

  08 Aug 2011; James Rowe <jnrowe@gmail.com> seqdiag-0.3.7.ebuild:
  Keyworded amd64.

*seqdiag-0.3.7 (09 Jul 2011)

  09 Jul 2011; James Rowe <jnrowe@gmail.com> +seqdiag-0.3.7.ebuild,
  metadata.xml:
  Version bump [426].

  07 Jul 2011; James Rowe <jnrowe@gmail.com> -seqdiag-0.3.3.ebuild,
  seqdiag-0.3.5.ebuild:
  Keyworded x86.

  07 Jul 2011; James Rowe <jnrowe@gmail.com> seqdiag-0.3.5.ebuild:
  Keyworded amd64.

  16 Jun 2011; James Rowe <jnrowe@gmail.com> -seqdiag-0.3.1.ebuild,
  seqdiag-0.3.3.ebuild:
  Keyworded x86.

  16 Jun 2011; James Rowe <jnrowe@gmail.com> seqdiag-0.3.3.ebuild:
  Keyworded amd64.

  08 Jun 2011; James Rowe <jnrowe@gmail.com> -seqdiag-0.2.7.ebuild,
  seqdiag-0.3.1.ebuild:
  Keyworded x86.

  07 Jun 2011; James Rowe <jnrowe@gmail.com> seqdiag-0.3.1.ebuild:
  Keyworded amd64.

*seqdiag-0.3.5 (07 Jun 2011)

  07 Jun 2011; James Rowe <jnrowe@gmail.com> +seqdiag-0.3.5.ebuild:
  Version bump [380].

  27 May 2011; James Rowe <jnrowe@gmail.com> -seqdiag-0.2.5.ebuild,
  seqdiag-0.2.7.ebuild:
  Keyworded x86.

  25 May 2011; James Rowe <jnrowe@gmail.com> seqdiag-0.2.7.ebuild:
  Keyworded amd64.

*seqdiag-0.3.3 (17 May 2011)
