@@ -1,13 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST seqdiag-0.3.8.tar.gz 23343 RMD160 a798f567b9829e189ef98f81743edbb5b05ddae8 SHA1 92aa715990364cfc58cbb2df3594dadeb7a1d4ff SHA256 6c4a5b236b443246bb3065fb9606f9ea11b9dafee48b337f7419370fed715575
-DIST seqdiag-0.5.0.tar.gz 25580 RMD160 4b68e4e2410f765067bb8fbd7c3708747bbe9f08 SHA1 94948f5cbbe8be5605afa7a72ac7aa20a5545f5d SHA256 89b383bd37fb09235a90c677868080e53ecca6682e79b2f6f3cdfa9adb5f7197
 DIST seqdiag-0.5.1.tar.gz 25623 RMD160 5e4020d9991800c6d0b0c4b7feea828e1da29b8d SHA1 e49b3a7673d34ff79964208c085d84b8ea81c34c SHA256 f40f25a5acaee867153f202d27d37b63a67ffe1c97eb8650c8fc73294b3bae2f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7Ap3YACgkQzJrj3cAXR0lqiQCggOHP6ZcKJxPchnKzik9BEjeB
-z68AoJFrxDuzXD02cyOicQrVWM0tGQto
-=PPNo
+iEYEAREKAAYFAk7KGwUACgkQzJrj3cAXR0l9+QCglOGivdhTQiHy41vNFmGh5RCY
+9PcAnj+abYgw8eYcfoLkivn3l0ts1jHo
+=BNZ1
 -----END PGP SIGNATURE-----
