@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm prepare test
-DEPEND=dev-python/setuptools test? ( dev-python/pep8 ) >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* ) test? ( dev-python/nose )
-DESCRIPTION=Generate sequence-diagram image files from spec-text files
-EAPI=3
-HOMEPAGE=http://pypi.python.org/pypi/seqdiag/
-IUSE=examples minimal pdf test test
-KEYWORDS=~amd64 ~x86
-LICENSE=Apache-2.0
-RDEPEND=dev-python/setuptools dev-python/funcparserlib dev-python/imaging >=media-gfx/blockdiag-0.9.5 !minimal? ( dev-python/sphinx ) pdf? ( dev-python/reportlab ) >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
-SLOT=0
-SRC_URI=mirror://pypi/s/seqdiag/seqdiag-0.5.0.tar.gz
-_eclasses_=distutils	b4c334e216d998c4ce4b750cb091e42e	eutils	33ef77a15337022e05342d2c772a7a5a	jnrowe-pypi	4211dd4b4d8a9d76f3899257c8b7bbad	multilib	c4883399ddd3e1d2bd291607b30fded4	portability	068c15f252b74e92d1c8a40f78735c58	python	6bbd984910e27780e5d0ea543d83ef84	toolchain-funcs	39892b66d54a54fdd2b28731b975d8bf	user	c92b0fe8fc686f88dfd912d880501e9c
-_md5_=88b81d3e6a29c70ebf73d0c47385cc73
