@@ -19,12 +19,8 @@ REM 2011-11-25 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/vanity-1.1.0 
 REM 2011-12-18 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-vcs/gitflow-0.4.1-r2 %a
 REM 2011-12-18 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-vcs/gitflow-0.4.1-r2 %a
 REM 2011-12-21 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/attest-0.5.2 %a
-REM 2011-12-21 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-gfx/seqdiag-0.5.0 %a
-REM 2011-12-21 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/seqdiag-0.5.0 %a
 REM 2012-01-10 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 app-misc/hammertime-0.1.3 %a
 REM 2012-01-11 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 app-misc/hammertime-0.1.3 %a
-REM 2012-01-15 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-gfx/seqdiag-0.3.8 %a
-REM 2012-01-16 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/seqdiag-0.3.8 %a
 REM 2012-01-16 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/github2-0.5.1 %a
 REM 2012-01-16 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/github2-0.5.1 %a
 REM 2012-01-24 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-gfx/sphinxcontrib-mscgen-0.4 %a
